--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,9 @@
 @use 'hero';
 @use 'shows';
 @use 'plans';
-@use 'watch-anywhere';
+@use 'avaliable-devices';
+@use 'faq';
+@use 'footer';
 
 
 //importando estilo de fonte
@@ -85,4 +87,43 @@ body{
     border-radius: 4px;
     margin-top: 2vw;
     margin-bottom: 8px;
+}
+
+.image-text-section {
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    img {
+        max-width: 100%;
+    }
+
+    &__text__container {
+        padding: 2vw;
+
+        h2 {
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width {
+        position: relative;
+        display: block;
+
+        img {
+            width: 100%;
+        }
+
+        &__text__container {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            height: 100%;
+            width: calc(50% - 5.6vw);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+    }
 }
