--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -1,3 +1,5 @@
+@use 'variaveis';
+
 .faq {
     padding: 5.6vw;
 
@@ -12,7 +14,7 @@
             margin-bottom: 16px;
 
             &__question {
-                color: #fff;
+                color: variaveis.$corSecaoFAQ;
                 font-size: 20px;
                 padding: 24px;
                 display: block;
@@ -38,14 +40,15 @@
                 padding: 0 24px;
                 transition: height, .5s ease;
 
-                ul {
+                li {
                     padding-left: 40px;
-                }
-
-                li{
-                    list-style: none;
                     margin-top: 24px;
                 }
+
+                a {
+                    color: variaveis.$corSecaoFAQ;
+                }
+
             }
 
             &--is-open {
